[package]
name = "evm-precompile-utils"
version = "0.1.0"
authors = ["PureStake"]
edition = "2021"
description = "Utils to write EVM precompiles."

[dependencies]
ethereum = { version = "0.8.0", default-features = false, features = ["with-serde"] }
ethereum-types = { version = "0.12", default-features = false }
evm = { version = "0.29.0", default-features = false, features = ["with-serde"] }
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
precompile-utils-macro = { path = "macro" }
sha3 = { version = "0.10", default-features = false }
ark-std = "0.3.0"

ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-marlin = { git = "https://github.com/arkworks-rs/marlin", branch = "master" }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }